added slide for need to know on easter page

--- a/easter.html
+++ b/easter.html
@@ -214,6 +214,11 @@
               <h3 class="text-center">Discipleship</h3>
               <script src="https://fast.wistia.com/embed/medias/36x2dxj2x7.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding rounded-lg overflow-hidden" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_36x2dxj2x7 popover=true popoverAnimateThumbnail=true videoFoam=true playerColor=ee79c7" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
             </div>
+
+            <div class="swiper-slide">
+              <h3 class="text-center">Weekly News</h3>
+              <script src="https://fast.wistia.com/embed/medias/36x2dxj2x7.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding rounded-lg overflow-hidden" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_36x2dxj2x7 popover=true popoverAnimateThumbnail=true videoFoam=true playerColor=ee79c7" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
+            </div>
   
           
         </div>
