--- a/easter.html
+++ b/easter.html
@@ -37,7 +37,7 @@
     <link rel="stylesheet" href="./Themes/new/Styles/easter.css" />
   </head>
   <body>
-    <section class="p-0 w-100 bg-white d-grid grid-cols-2 justify-content-between align-content-center drop-shadow">
+    <section class="p-0 w-100 bg-white d-grid grid-cols-2 justify-content-between align-content-center drop-shadow bring-forward">
       <div class="d-grid align-content-center">
         <a href="/" class="px-3 mb-0">
           <img src="./Themes/new/Assets/Vectors/logo.svg" alt="NewSpring Church Logo" style="width: 160px; max-width: 160px" />
@@ -67,35 +67,36 @@
     <span id="content" class="easter">
 
       <section class="bg-blue-dark p-0 d-grid gap-x-0 gap-y-0 grid-cols-4 grid-cols-md-6 grid-cols-lg-8 overflow-hidden crisp-edges">
-        <div class="ratio-square background-cover background-center w-100" style="background-image:url('/Themes/new/Assets/Vectors/easter/1.svg');"></div>
-        <div class="ratio-square background-cover background-center w-100" style="background-image:url('/Themes/new/Assets/Vectors/easter/2.svg');"></div>
-        <div class="ratio-square background-cover background-center w-100" style="background-image:url('/Themes/new/Assets/Vectors/easter/3.svg');"></div>
-        <div class="ratio-square background-cover background-center w-100" style="background-image:url('/Themes/new/Assets/Vectors/easter/4.svg');"></div>
-        <div class="ratio-square background-cover background-center w-100" style="background-image:url('/Themes/new/Assets/Vectors/easter/5.svg');"></div>
-        <div class="ratio-square background-cover background-center w-100" style="background-image:url('/Themes/new/Assets/Vectors/easter/6.svg');"></div>
-        <div class="ratio-square background-cover background-center w-100" style="background-image:url('/Themes/new/Assets/Vectors/easter/7.svg');"></div>
-        <div class="ratio-square background-cover background-center w-100" style="background-image:url('/Themes/new/Assets/Vectors/easter/8.svg');"></div>
-        <div class="ratio-square background-cover background-center w-100 hidden-xs hidden-sm hidden-lg hidden-xl" style="background-image:url('/Themes/new/Assets/Vectors/easter/9.svg');"></div>
-        <div class="ratio-square background-cover background-center w-100 hidden-xs hidden-sm hidden-lg hidden-xl" style="background-image:url('/Themes/new/Assets/Vectors/easter/10.svg');"></div>
-        <div class="ratio-square background-cover background-center w-100 hidden-xs hidden-sm hidden-lg hidden-xl" style="background-image:url('/Themes/new/Assets/Vectors/easter/11.svg');"></div>
-        <div class="ratio-square background-cover background-center w-100 hidden-xs hidden-sm hidden-lg hidden-xl" style="background-image:url('/Themes/new/Assets/Vectors/easter/12.svg');"></div>
+        <div class="ratio-square background-cover background-center w-100" style="background-image:url('/Themes/new/Assets/Vectors/easter/1.svg');" data-aos="slide-down" data-aos-duration="500" data-aos-delay="250"></div>
+        <div class="ratio-square background-cover background-center w-100" style="background-image:url('/Themes/new/Assets/Vectors/easter/2.svg');" data-aos="slide-down" data-aos-duration="800" data-aos-delay="450"></div>
+        <div class="ratio-square background-cover background-center w-100" style="background-image:url('/Themes/new/Assets/Vectors/easter/3.svg');" 
+        data-aos="slide-down" data-aos-duration="900" data-aos-delay="150"></div>
+        <div class="ratio-square background-cover background-center w-100" style="background-image:url('/Themes/new/Assets/Vectors/easter/4.svg');" data-aos="slide-down" data-aos-duration="300" data-aos-delay="450"></div>
+        <div class="ratio-square background-cover background-center w-100" style="background-image:url('/Themes/new/Assets/Vectors/easter/5.svg');" data-aos="slide-down" data-aos-duration="700" data-aos-delay="150"></div>
+        <div class="ratio-square background-cover background-center w-100" style="background-image:url('/Themes/new/Assets/Vectors/easter/6.svg');" data-aos="slide-down" data-aos-duration="500" data-aos-delay="550"></div>
+        <div class="ratio-square background-cover background-center w-100" style="background-image:url('/Themes/new/Assets/Vectors/easter/7.svg');" data-aos="slide-down" data-aos-duration="400" data-aos-delay="450"></div>
+        <div class="ratio-square background-cover background-center w-100" style="background-image:url('/Themes/new/Assets/Vectors/easter/8.svg');" data-aos="slide-down" data-aos-duration="1200" data-aos-delay="150"></div>
+        <div class="ratio-square background-cover background-center w-100 hidden-xs hidden-sm hidden-lg hidden-xl" style="background-image:url('/Themes/new/Assets/Vectors/easter/9.svg');" data-aos="slide-down" data-aos-duration="600" data-aos-delay="350"></div>
+        <div class="ratio-square background-cover background-center w-100 hidden-xs hidden-sm hidden-lg hidden-xl" style="background-image:url('/Themes/new/Assets/Vectors/easter/10.svg');" data-aos="slide-down" data-aos-duration="400" data-aos-delay="650"></div>
+        <div class="ratio-square background-cover background-center w-100 hidden-xs hidden-sm hidden-lg hidden-xl" style="background-image:url('/Themes/new/Assets/Vectors/easter/11.svg');" data-aos="slide-down" data-aos-duration="400" data-aos-delay="550"></div>
+        <div class="ratio-square background-cover background-center w-100 hidden-xs hidden-sm hidden-lg hidden-xl" style="background-image:url('/Themes/new/Assets/Vectors/easter/12.svg');" data-aos="slide-down" data-aos-duration="1100" data-aos-delay="250"></div>
         
         <div class="p-6 p-md-7 col-span-4 col-span-md-6 col-span-lg-8 text-center">
           <img src="/Themes/new/Assets/Vectors/easter/lockup.svg" alt="" class="d-inline-block w-100 " style="max-width: 500px;">
         </div>
 
-        <div class="ratio-square background-cover background-center w-100" style="background-image:url('/Themes/new/Assets/Vectors/easter/13.svg');"></div>
-        <div class="ratio-square background-cover background-center w-100" style="background-image:url('/Themes/new/Assets/Vectors/easter/14.svg');"></div>
-        <div class="ratio-square background-cover background-center w-100" style="background-image:url('/Themes/new/Assets/Vectors/easter/15.svg');"></div>
-        <div class="ratio-square background-cover background-center w-100" style="background-image:url('/Themes/new/Assets/Vectors/easter/16.svg');"></div>
-        <div class="ratio-square background-cover background-center w-100" style="background-image:url('/Themes/new/Assets/Vectors/easter/17.svg');"></div>
-        <div class="ratio-square background-cover background-center w-100" style="background-image:url('/Themes/new/Assets/Vectors/easter/18.svg');"></div>
-        <div class="ratio-square background-cover background-center w-100" style="background-image:url('/Themes/new/Assets/Vectors/easter/19.svg');"></div>
-        <div class="ratio-square background-cover background-center w-100" style="background-image:url('/Themes/new/Assets/Vectors/easter/20.svg');"></div>
-        <div class="ratio-square background-cover background-center w-100 hidden-xs hidden-sm hidden-lg hidden-xl" style="background-image:url('/Themes/new/Assets/Vectors/easter/21.svg');"></div>
-        <div class="ratio-square background-cover background-center w-100 hidden-xs hidden-sm hidden-lg hidden-xl" style="background-image:url('/Themes/new/Assets/Vectors/easter/22.svg');"></div>
-        <div class="ratio-square background-cover background-center w-100 hidden-xs hidden-sm hidden-lg hidden-xl" style="background-image:url('/Themes/new/Assets/Vectors/easter/23.svg');"></div>
-        <div class="ratio-square background-cover background-center w-100 hidden-xs hidden-sm hidden-lg hidden-xl" style="background-image:url('/Themes/new/Assets/Vectors/easter/24.svg');"></div>
+        <div class="ratio-square background-cover background-center w-100" style="background-image:url('/Themes/new/Assets/Vectors/easter/13.svg');" data-aos="slide-up" data-aos-duration="1100" data-aos-delay="250"></div>
+        <div class="ratio-square background-cover background-center w-100" style="background-image:url('/Themes/new/Assets/Vectors/easter/14.svg');" data-aos="slide-up" data-aos-duration="600" data-aos-delay="150"></div>
+        <div class="ratio-square background-cover background-center w-100" style="background-image:url('/Themes/new/Assets/Vectors/easter/15.svg');" data-aos="slide-up" data-aos-duration="400" data-aos-delay="550"></div>
+        <div class="ratio-square background-cover background-center w-100" style="background-image:url('/Themes/new/Assets/Vectors/easter/16.svg');" data-aos="slide-up" data-aos-duration="1200" data-aos-delay="150"></div>
+        <div class="ratio-square background-cover background-center w-100" style="background-image:url('/Themes/new/Assets/Vectors/easter/17.svg');" data-aos="slide-up" data-aos-duration="600" data-aos-delay="550"></div>
+        <div class="ratio-square background-cover background-center w-100" style="background-image:url('/Themes/new/Assets/Vectors/easter/18.svg');" data-aos="slide-up" data-aos-duration="750" data-aos-delay="350"></div>
+        <div class="ratio-square background-cover background-center w-100" style="background-image:url('/Themes/new/Assets/Vectors/easter/19.svg');" data-aos="slide-up" data-aos-duration="400" data-aos-delay="650"></div>
+        <div class="ratio-square background-cover background-center w-100" style="background-image:url('/Themes/new/Assets/Vectors/easter/20.svg');" data-aos="slide-up" data-aos-duration="1300" data-aos-delay="50"></div>
+        <div class="ratio-square background-cover background-center w-100 hidden-xs hidden-sm hidden-lg hidden-xl" style="background-image:url('/Themes/new/Assets/Vectors/easter/21.svg');" data-aos="slide-up" data-aos-duration="600" data-aos-delay="150"></div>
+        <div class="ratio-square background-cover background-center w-100 hidden-xs hidden-sm hidden-lg hidden-xl" style="background-image:url('/Themes/new/Assets/Vectors/easter/22.svg');" data-aos="slide-up" data-aos-duration="600" data-aos-delay="350"></div>
+        <div class="ratio-square background-cover background-center w-100 hidden-xs hidden-sm hidden-lg hidden-xl" style="background-image:url('/Themes/new/Assets/Vectors/easter/23.svg');" data-aos="slide-up" data-aos-duration="1200" data-aos-delay="150"></div>
+        <div class="ratio-square background-cover background-center w-100 hidden-xs hidden-sm hidden-lg hidden-xl" style="background-image:url('/Themes/new/Assets/Vectors/easter/24.svg');" data-aos="slide-up" data-aos-duration="800" data-aos-delay="250"></div>
         
       </section>
 
@@ -169,7 +170,7 @@
             <h2 class="display-3 mb-6">Here's What to Expect</h2>
             <div class="text-constrained mx-auto">
               <p>
-                Aliquip magna ex et est non excepteur est id esse dolore consequat tempor. Voluptate veniam dolore voluptate mollit est anim. Ad minim Lorem ipsum culpa in aliquip non adipisicing aute proident tempor.
+                Check out this series of mini videos to get to know us and learn more about what to expect when you visit.
               </p>
             </div>
           </div>
