updated video ids

--- a/easter.html
+++ b/easter.html
@@ -183,42 +183,42 @@
             <!-- Slides -->
             <div class="swiper-slide">
               <h3 class="text-center">Welcome</h3>
-              <script src="https://fast.wistia.com/embed/medias/36x2dxj2x7.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding rounded-lg overflow-hidden" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_36x2dxj2x7 popover=true popoverAnimateThumbnail=true videoFoam=true playerColor=ee79c7" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
+              <script src="https://fast.wistia.com/embed/medias/ewd8dwex26.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding rounded-lg overflow-hidden" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_ewd8dwex26 popover=true popoverAnimateThumbnail=true videoFoam=true playerColor=ee79c7" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
             </div>
 
             <div class="swiper-slide">
               <h3 class="text-center">Parking</h3>
-              <script src="https://fast.wistia.com/embed/medias/36x2dxj2x7.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding rounded-lg overflow-hidden" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_36x2dxj2x7 popover=true popoverAnimateThumbnail=true videoFoam=true playerColor=ee79c7" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
+              <script src="https://fast.wistia.com/embed/medias/lizyihphof.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding rounded-lg overflow-hidden" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_lizyihphof popover=true popoverAnimateThumbnail=true videoFoam=true playerColor=ee79c7" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
             </div>
 
             <div class="swiper-slide">
               <h3 class="text-center">Guest Services</h3>
-              <script src="https://fast.wistia.com/embed/medias/36x2dxj2x7.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding rounded-lg overflow-hidden" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_36x2dxj2x7 popover=true popoverAnimateThumbnail=true videoFoam=true playerColor=ee79c7" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
+              <script src="https://fast.wistia.com/embed/medias/37n6kj1otd.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding rounded-lg overflow-hidden" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_37n6kj1otd popover=true popoverAnimateThumbnail=true videoFoam=true playerColor=ee79c7" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
             </div>
 
             <div class="swiper-slide">
               <h3 class="text-center">Gatherings</h3>
-              <script src="https://fast.wistia.com/embed/medias/36x2dxj2x7.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding rounded-lg overflow-hidden" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_36x2dxj2x7 popover=true popoverAnimateThumbnail=true videoFoam=true playerColor=ee79c7" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
+              <script src="https://fast.wistia.com/embed/medias/tlhtbm56fj.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding rounded-lg overflow-hidden" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_tlhtbm56fj popover=true popoverAnimateThumbnail=true videoFoam=true playerColor=ee79c7" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
             </div>
 
             <div class="swiper-slide">
               <h3 class="text-center">For Kids</h3>
-              <script src="https://fast.wistia.com/embed/medias/36x2dxj2x7.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding rounded-lg overflow-hidden" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_36x2dxj2x7 popover=true popoverAnimateThumbnail=true videoFoam=true playerColor=ee79c7" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
+              <script src="https://fast.wistia.com/embed/medias/95f95oa7pr.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding rounded-lg overflow-hidden" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_95f95oa7pr popover=true popoverAnimateThumbnail=true videoFoam=true playerColor=ee79c7" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
             </div>
 
             <div class="swiper-slide">
               <h3 class="text-center">For Students</h3>
-              <script src="https://fast.wistia.com/embed/medias/36x2dxj2x7.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding rounded-lg overflow-hidden" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_36x2dxj2x7 popover=true popoverAnimateThumbnail=true videoFoam=true playerColor=ee79c7" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
+              <script src="https://fast.wistia.com/embed/medias/yhti78hou3.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding rounded-lg overflow-hidden" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_yhti78hou3 popover=true popoverAnimateThumbnail=true videoFoam=true playerColor=ee79c7" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
             </div>
 
             <div class="swiper-slide">
               <h3 class="text-center">Discipleship</h3>
-              <script src="https://fast.wistia.com/embed/medias/36x2dxj2x7.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding rounded-lg overflow-hidden" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_36x2dxj2x7 popover=true popoverAnimateThumbnail=true videoFoam=true playerColor=ee79c7" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
+              <script src="https://fast.wistia.com/embed/medias/92kc4yhjnl.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding rounded-lg overflow-hidden" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_92kc4yhjnl popover=true popoverAnimateThumbnail=true videoFoam=true playerColor=ee79c7" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
             </div>
 
             <div class="swiper-slide">
               <h3 class="text-center">Weekly News</h3>
-              <script src="https://fast.wistia.com/embed/medias/36x2dxj2x7.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding rounded-lg overflow-hidden" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_36x2dxj2x7 popover=true popoverAnimateThumbnail=true videoFoam=true playerColor=ee79c7" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
+              <script src="https://fast.wistia.com/embed/medias/9gkxwo0z1p.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding rounded-lg overflow-hidden" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_9gkxwo0z1p popover=true popoverAnimateThumbnail=true videoFoam=true playerColor=ee79c7" style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
             </div>
   
           
@@ -236,6 +236,7 @@
           var swiper = new Swiper("#asdf", {
             slidesPerView: 1.15,
             spaceBetween: 15,
+            touchAngle: 20,
             breakpoints: {
               667: {
                 slidesPerView: 1.15,
@@ -258,13 +259,13 @@
                 spaceBetween: 15,
               },
             },
-            speed: 200,
+            speed: 100,
             loop: false,
             cssMode: isMobile,
             centeredSlides: true,
             roundLengths: true,
             grabCursor: true,
-            resistanceRatio: 0.3,
+            resistanceRatio: 0.15,
             keyboard: {
               enabled: true,
               onlyInViewport: false,
