--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
 
       <section class="values">
         <div class="page-constrained mx-auto text-center mb-6">
-          <p class="pretitle text-primary">Who We Are &amp; What We Believe</p>
+          <p class="pretitle text-primary">What We Believe</p>
           <h2 class="display-2 px-md-4 my-6">Cupidatat eu est occaecat mollit aliquip ea.</span></h2>
         </div>
         <div class="text-constrained mx-auto text-center" data-aos="fade-up">            
