updated play buttons in family ministry sections

--- a/about.html
+++ b/about.html
@@ -377,7 +377,8 @@
             <p>Every Sunday, babies through fifth-grade children experience safe, age-appropriate environments where they can have fun learning about Jesus on their level. If you have an infant, we have a Mother’s Viewing Room where you can watch the service and care for your newborn in a dedicated space until you’re ready for them to join us in KidSpring. If your child has individual needs, SpringZone can help them engage with Jesus on the level most appropriate for them.</p>
             <p class="mb-0 d-flex flex-column flex-sm-row gap-y-1 gap-x-1 gap-y-sm-0" data-aos="fade-up">
               <a href="#" target="_blank" class="btn btn-default drop-shadow">Learn more</a>
-              <a href="#" target="_blank" class="btn btn-link text-white drop-shadow">Play Video <i class="fa-solid fa-play ml-1"></i></a>
+              <script src="https://fast.wistia.com/embed/medias/95f95oa7pr.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><span class="wistia_embed wistia_async_95f95oa7pr popover=true popoverContent=link" style="display:inline;position:relative"><a href="#" class="btn btn-link text-white drop-shadow">Play Video <i class="fa-solid fa-play ml-1"></i></a></span>
+
             </p>
           </div>
         </div>
@@ -404,7 +405,7 @@
             <p>Fuse is NewSpring’s student ministry for sixth through twelfth-grade students that meets each Wednesday. At Fuse, our aim is to graduate students into a lifetime of following Jesus. We believe the next generation of the church will change the world.</p>
             <p class="mb-0 d-flex flex-column flex-sm-row gap-y-1 gap-x-1 gap-y-sm-0" data-aos="fade-up">
               <a href="#" target="_blank" class="btn btn-default drop-shadow">Learn more</a>
-              <a href="#" target="_blank" class="btn btn-link text-white drop-shadow">Play Video <i class="fa-solid fa-play ml-1"></i></a>
+              <script src="https://fast.wistia.com/embed/medias/yhti78hou3.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><span class="wistia_embed wistia_async_yhti78hou3 popover=true popoverContent=link" style="display:inline;position:relative"><a href="#" class="btn btn-link text-white drop-shadow">Play Video <i class="fa-solid fa-play ml-1"></i></a></span>
             </p>
           </div>
           <div></div>
