made cta buttons in family ministries sections primary buttons

--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
     </section>
 
     <section class="bg-gray-darker text-white p-3">
-      <div class="d-flex flex-column flex-md-row justify-content-between align-content-center">
+      <div class="d-flex flex-column flex-md-row justify-content-between align-content-center px-1">
         <h1 class="h6 mb-3 mb-md-0">About</h1>
         <ul class="d-flex flex-column flex-md-row list-unstyled mb-0 gap-y-2 gap-x-sm-4 gap-y-sm-0 text-center">
           <li class="d-flex flex-wrap align-content-center"><a href="#" class="text-white d-flex height-max-content text-decoration-none font-sans font-medium">About Us</a></li>
@@ -376,7 +376,7 @@
             <h2 class="h1">KidSpring</h2>
             <p>Every Sunday, babies through fifth-grade children experience safe, age-appropriate environments where they can have fun learning about Jesus on their level. If you have an infant, we have a Mother’s Viewing Room where you can watch the service and care for your newborn in a dedicated space until you’re ready for them to join us in KidSpring. If your child has individual needs, SpringZone can help them engage with Jesus on the level most appropriate for them.</p>
             <p class="mb-0 d-flex flex-column flex-sm-row gap-y-1 gap-x-1 gap-y-sm-0" data-aos="fade-up">
-              <a href="#" target="_blank" class="btn btn-default drop-shadow">Learn more</a>
+              <a href="#" target="_blank" class="btn btn-primary drop-shadow">Learn more</a>
               <script src="https://fast.wistia.com/embed/medias/95f95oa7pr.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><span class="wistia_embed wistia_async_95f95oa7pr popover=true popoverContent=link" style="display:inline;position:relative"><a href="#" class="btn btn-link text-white drop-shadow">Play Video <i class="fa-solid fa-play ml-1"></i></a></span>
 
             </p>
@@ -404,7 +404,7 @@
             <h2 class="h1">Fuse</h2>
             <p>Fuse is NewSpring’s student ministry for sixth through twelfth-grade students that meets each Wednesday. At Fuse, our aim is to graduate students into a lifetime of following Jesus. We believe the next generation of the church will change the world.</p>
             <p class="mb-0 d-flex flex-column flex-sm-row gap-y-1 gap-x-1 gap-y-sm-0" data-aos="fade-up">
-              <a href="#" target="_blank" class="btn btn-default drop-shadow">Learn more</a>
+              <a href="#" target="_blank" class="btn btn-primary drop-shadow">Learn more</a>
               <script src="https://fast.wistia.com/embed/medias/yhti78hou3.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><span class="wistia_embed wistia_async_yhti78hou3 popover=true popoverContent=link" style="display:inline;position:relative"><a href="#" class="btn btn-link text-white drop-shadow">Play Video <i class="fa-solid fa-play ml-1"></i></a></span>
             </p>
           </div>
@@ -553,7 +553,7 @@
     </div>
 
     <footer class="bg-gray-dark text-white px-4 py-7 px-md-7 py-md-8 text-center">
-      <div class="d-flex flex-column flex-md-row flex-wrap justify-content-between align-content-end">
+      <div class="d-flex flex-column flex-md-row flex-wrap justify-content-between align-content-center">
         <div data-aos="fade-up" class="w-100 w-md-auto height-max-content text-md-left">
           <img src="./Themes/new/Assets/SVG/mark.svg" alt="NewSpring Church Logo" class="mb-3" style="width: 40px; max-width: 40px" />
           <h6 class="font-black text-uppercase">NewSpring Church</h6>
