finished subnav code

--- a/about.html
+++ b/about.html
@@ -65,16 +65,20 @@
       </div>
     </section>
 
-    <section class="bg-gray-darker text-white p-3">
-      <div class="d-flex flex-column flex-md-row justify-content-between align-content-center px-1">
-        <h1 class="h6 mb-3 mb-md-0">About</h1>
-        <ul class="d-flex flex-column flex-md-row list-unstyled mb-0 gap-y-2 gap-x-sm-4 gap-y-sm-0 text-center">
-          <li class="d-flex flex-wrap align-content-center"><a href="#" class="text-white d-flex height-max-content text-decoration-none font-sans font-medium">About Us</a></li>
-          <li class="d-flex flex-wrap align-content-center"><a href="#" class="d-flex height-max-content text-decoration-none font-sans font-medium">Our Beliefs</a></li>
-          <li class="d-flex flex-wrap align-content-center"><a href="#" class="d-flex height-max-content text-decoration-none font-sans font-medium">Our Staff</a></li>
-          <li class="d-flex flex-wrap align-content-center"><a href="#" class="d-flex height-max-content text-decoration-none font-sans font-medium">Our Story</a></li>
-        </ul>
+    <section id="navigation-secondary" class="py-2 px-1 bring-forward drop-shadow">
+      <div class="d-flex flex-column flex-md-row justify-content-between align-content-center px-2">
+        <h2 class="h6 mb-0 d-flex justify-content-between" style="margin-top: 2px;">About <i class="fa-solid fa-caret-down hidden-md hidden-lg hidden-xl" role="button" data-toggle="collapse" href="#nav-secondary" aria-expanded="false" aria-controls="nav-secondary"></i></h2>
+        <div class="collapse in" id="nav-secondary">
+          <ul class="px-2 py-1 px-md-0 py-md-0 d-flex flex-column flex-md-row list-unstyled mb-0 gap-x-sm-4 text-center mt-2 mt-md-0 rounded">
+            <li class="d-flex flex-wrap align-content-center"><a href="/about" class="text-white d-flex w-100 py-1 py-md-0 height-max-content text-decoration-none font-sans font-medium">About Us</a></li>
+            <li class="d-flex flex-wrap align-content-center"><a href="/our-beliefs" class="d-flex w-100 py-1 py-md-0 height-max-content text-decoration-none font-sans font-medium">Our Beliefs</a></li>
+            <li class="d-flex flex-wrap align-content-center"><a href="/staff" class="d-flex w-100 py-1 py-md-0 height-max-content text-decoration-none font-sans font-medium">Our Staff</a></li>
+            <li class="d-flex flex-wrap align-content-center"><a href="/story" class="d-flex w-100 py-1 py-md-0 height-max-content text-decoration-none font-sans font-medium">Our Story</a></li>
+          </ul>
+        </div>
       </div>
+
+      
     </section>
 
     <div id="content">
