updated copy for /about

--- a/about.html
+++ b/about.html
@@ -99,11 +99,10 @@
       <section id="values">
         <div class="page-constrained mx-auto text-center mb-6">
           <p class="pretitle">What We Believe</p>
-          <h2 class="display-2 px-md-4 my-6">Cupidatat eu est occaecat mollit aliquip ea.</span></h2>
+          <h2 class="display-2 px-md-4 my-6">These beliefs are at the core of who we are.</h2>
         </div>
         <div class="text-constrained mx-auto text-center" data-aos="fade-up">            
-
-          <p>Minim mollit proident enim velit consequat magna labore ut dolor ad veniam labore velit. Nulla reprehenderit ut reprehenderit laborum amet ipsum pariatur tempor. Adipisicing est eu exercitation proident est cupidatat eiusmod laborum quis irure qui minim.</p>
+          <p> At NewSpring, we trust God’s Word, show visible love, pursue uncommon unity, make bold disciples, and have a kingdom mentality. We believe these five values are a vital part of our everyday relationship with Jesus.</p>
         </div>
         <div class="page-constrained mx-auto d-grid grid-cols-md-12 gap-x-md-5 gap-x-lg-6 text-center my-6 my-md-7">
           <div class="col-span-12 col-span-sm-6 col-span-lg-4" data-aos="fade-up">
@@ -191,8 +190,8 @@
           </div>
         </div>
         <div class="text-constrained mx-auto text-center">
-          <p>Looking to dive deeper into the theology of what we believe as a church? Enim voluptate proident laborum irure Lorem cillum elit aute.</p>
-          <p><a href="/our-beliefs" class="btn btn-primary">Our Beliefs</a></p>
+          <p>Looking to dive deeper into the theology of what we believe as a church?</p>
+          <p><a href="/our-beliefs" class="btn btn-primary">Learn More</a></p>
         </div>
 
 
@@ -262,6 +261,11 @@
             <div class="swiper-slide">
               <h3 class="text-center">Welcome</h3>
               <script src="https://fast.wistia.com/embed/medias/ewd8dwex26.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding rounded-lg overflow-hidden" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_ewd8dwex26 popover=true popoverAnimateThumbnail=true videoFoam=true " style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
+            </div>
+
+            <div class="swiper-slide">
+              <h3 class="text-center">Parking</h3>
+              <script src="https://fast.wistia.com/embed/medias/lizyihphof.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><div class="wistia_responsive_padding rounded-lg overflow-hidden" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><span class="wistia_embed wistia_async_lizyihphof popover=true popoverAnimateThumbnail=true videoFoam=true " style="display:inline-block;height:100%;position:relative;width:100%">&nbsp;</span></div></div>
             </div>
 
             <div class="swiper-slide">
@@ -351,17 +355,15 @@
 
       <section id="locations">
         <div class="text-constrained mx-auto text-center">
-          <p class="pretitle">Where We Gather</p>
+          <p class="pretitle">One Church. Many Locations.</p>
           <h2 class="display-3">NewSpring is one church with <span class="text-primary">14&nbsp;locations</span> across South Carolina.</h2>
-          <p>
-            Discover classes, events, and other monthly gatherings or learn more about our locations, staff, and local partners by finding the location nearest you.
-          </p>
+          <p>Discover classes, events, and other monthly gatherings or learn more about our campuses, staff, and local partners by finding the location nearest you!</p>
           <form action="">
             <div class="d-grid grid-cols-1 grid-cols-sm-2 gap-y-2 gap-x-2 mx-auto" style="max-width: 500px" data-aos="fade-up">
               
-              <input type="text" placeholder="Enter your Location" name="" id="" class="border-none rounded-full px-3 py-2 py-sm-1 text-center drop-shadow-sm" style="border: 1px solid #ddd !important;" data-append-query="/locations?location=" />
+              <input type="text" placeholder="Enter your Address" name="" id="" class="border-none rounded-full px-3 py-2 py-sm-1 text-center drop-shadow-sm" style="border: 1px solid #ddd !important;" data-append-query="/locations?location=" />
               <div>
-                <button type="submit" class="btn btn-primary btn-block">Search</button>
+                <button type="submit" class="btn btn-primary btn-block">Find a Location</button>
               </div>
             </div>
           </form>
@@ -414,7 +416,7 @@
           <div class="ltr">
             <p class="pretitle text-white">For Students</p>
             <h2 class="h1">Fuse</h2>
-            <p>Fuse is NewSpring’s student ministry for sixth through twelfth-grade students that meets each Wednesday. At Fuse, our aim is to graduate students into a lifetime of following Jesus. We believe the next generation of the church will change the world.</p>
+            <p>Fuse is NewSpring’s student ministry for sixth through twelfth-grade students that meets each Wednesday. At Fuse, our aim is to graduate students into a lifetime of following Jesus. We believe the next generation of the church will change the world!</p>
             <p class="mb-0 d-flex flex-column flex-sm-row gap-y-1 gap-x-1 gap-y-sm-0" data-aos="fade-up">
               <a href="/fuse" target="_blank" class="btn btn-primary drop-shadow">Learn more</a>
               <script src="https://fast.wistia.com/embed/medias/yhti78hou3.jsonp" async></script><script src="https://fast.wistia.com/assets/external/E-v1.js" async></script><span class="wistia_embed wistia_async_yhti78hou3 popover=true popoverContent=link" style="display:inline;position:relative"><a href="#" class="btn btn-link text-white drop-shadow">What to Expect <i class="fa-solid fa-play ml-1"></i></a></span>
@@ -472,9 +474,7 @@
                 <i class="fa-light fa-lg fa-plus ml-5 mt-1"></i>
               </div>
               <div id="collapseTwo" class="collapse in text-gray" role="tabpanel" aria-labelledby="headingOne">
-                <p>
-                  In KidSpring, children fifth grade and younger experience Jesus on their level. KidSpring is a safe, age-appropriate environment where kids have their own service with singing, a Bible lesson, and small group time. To see what our kids are learning, check out KidSpring’s YouTube channel.
-                </p>
+                <p>In KidSpring, children fifth grade and younger experience Jesus on their level. KidSpring is a safe, age-appropriate environment where kids have their own service with singing, a Bible lesson, and small group time. To see what our kids are learning, check out KidSpring’s <a href="https://www.youtube.com/channel/UCR3DeWGhdC_igCreHStybwA" target="_blank">YouTube channel</a>.</p>
                 <p>
                   For mothers with infants, every campus also has a viewing room where moms can watch the service and care for their newborns in a dedicated space.
                 </p>
@@ -493,10 +493,7 @@
                 <i class="fa-light fa-lg fa-plus ml-5 mt-1"></i>
               </div>
               <div id="collapseThree" class="collapse in text-gray" role="tabpanel" aria-labelledby="headingOne">
-                <p>
-                  Gatherings last about an hour and 10 minutes. We start by singing three to four songs, then you’ll hear from a member of our teaching team. To get a feel for our teaching style, check out the current series. At the end of the gathering, we create space to respond to what we’ve heard by singing, praying for one another, and bringing our tithes and offerings.
-
-                </p>
+                <p>Gatherings last about an hour and 10 minutes. We start by singing three to four songs, then you’ll hear from a member of our <a href="/staff/teaching-team">teaching team</a>. To get a feel for our teaching style, check out the <a href="/sermons">current series</a>. At the end of the gathering, we create space to respond to what we’ve heard by singing, praying for one another, and bringing our tithes and offerings.</p>
               </div>
             </div>
 
@@ -524,7 +521,7 @@
         <div class="text-constrained mx-auto">
           <h2>Still have questions?</h2>
           <p>We’d love to answer any questions you might have.</p>
-          <p class="mb-0"><a href="https://newspring.cc/workflows/800?Recipient=hello%40newspring.cc&ReturnUrl=https%3A%2F%2Fnewspring.cc%2Fabout&Subject=Question%20from%20Website" class="btn btn-primary">Contact Us</a></p>
+          <p class="mb-0"><a href="/workflows/152" class="btn btn-primary">Contact Us</a></p>
         </div>
       </section>
 
