updated hero link href

--- a/about.html
+++ b/about.html
@@ -92,7 +92,7 @@
         <div class="bring-forward text-constrained" style="height: max-content !important">
           <h1 class="display-3">We want everyone everywhere to have an everyday relationship with Jesus.</h1>
           <p class="hidden">One church. Many locations.</p>
-          <p class="mb-0"><a href="#locations" data-scroll class="btn btn-primary drop-shadow">Learn More</a></p>
+          <p class="mb-0"><a href="#values" data-scroll class="btn btn-primary drop-shadow">Learn More</a></p>
         </div>
       </section>
 
