changes to about/beliefs

--- a/beliefs-item.html
+++ b/beliefs-item.html
@@ -67,9 +67,9 @@
 
     <div id="content">
 
-      <section class="position-relative bg-gray-lighter d-flex justify-content-center align-content-center text-center py-6 py-md-7">
+      <section class="position-relative bg-tertiary text-white d-flex justify-content-center align-content-center text-center py-6 py-md-7">
         <div class="bring-forward text-constrained">
-          <p class="pretitle">What We Beleive About</p>
+          <p class="pretitle text-primary">What We Beleive About</p>
           <h1 class="display-3 mb-0">Jesus</h1>
         </div>
       </section>
