--- a/beliefs.html
+++ b/beliefs.html
@@ -85,9 +85,9 @@
 
       <section class="position-relative text-white d-flex justify-content-center align-content-center text-center pb-9" style="background: rgb(20,20,20);">
         <div
-          class="fullscreen background-cover background-center o-70"
-          style="background-image: url('/Themes/new/Assets/Images/about_hero2_2x1.jpg')"></div>
-        <div class="fullscreen o-80" style="background: rgb(20,20,20);
+          class="fullscreen background-cover background-center o-80"
+          style="background-image: url('https://images.unsplash.com/photo-1600262912274-28f333fa17bd?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2940&q=80')"></div>
+        <div class="fullscreen o-30" style="background: rgb(20,20,20);
   background: linear-gradient(0deg, rgba(20,20,20,0) 0%, rgba(20,20,20,1) 100%);"></div>
         <div class="bring-forward text-constrained" style="height: max-content !important">
           <h1 class="display-3">Our Beliefs</h1>
