--- a/about.html
+++ b/about.html
@@ -355,7 +355,7 @@
 
       <section id="locations">
         <div class="text-constrained mx-auto text-center">
-          <p class="pretitle">One Church. Many Locations.</p>
+          <p class="pretitle">Where We Gather</p>
           <h2 class="display-3">NewSpring is one church with <span class="text-primary">14&nbsp;locations</span> across South Carolina.</h2>
           <p>Discover classes, events, and other monthly gatherings or learn more about our campuses, staff, and local partners by finding the location nearest you!</p>
           <form action="">
