removed padding override for hero on /beliefs

--- a/beliefs.html
+++ b/beliefs.html
@@ -83,7 +83,7 @@
 
     <div id="content">
 
-      <section class="position-relative text-white d-flex justify-content-center align-content-center text-center pb-9" style="background: rgb(20,20,20);">
+      <section class="position-relative text-white d-flex justify-content-center align-content-center text-center" style="background: rgb(20,20,20);">
         <div
           class="fullscreen background-cover background-center o-80"
           style="background-image: url('https://images.unsplash.com/photo-1600262912274-28f333fa17bd?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2940&q=80')"></div>
