updated cta text for /beliefs

--- a/beliefs.html
+++ b/beliefs.html
@@ -101,55 +101,55 @@
           <div>
             <h2 class="h2">God</h2>
             <p>God is creator of the universe and author of life. God is spirit, and therefore, is timeless. Sovereignly possessing all power and all knowledge, He never tires, gains strength, or acquires new knowledge. He is all-present in the universe. God never changes.</p>
-            <p><a href="#">Learn More</a></p>
+            <p><a href="#">Read More</a></p>
           </div>
 
           <div>
             <h2 class="h2">Jesus</h2>
             <p>Jesus, the eternal Son of God, exists uncreated and is equal in deity with the Father and the Holy Spirit. The promised and prophesied Messiah is the Word that became flesh and made His dwelling among us.</p>
-            <p><a href="#">Learn More</a></p>
+            <p><a href="#">Read More</a></p>
           </div>
 
           <div>
             <h2 class="h2">Holy Spirit</h2>
             <p>The Holy Spirit, third person of the Trinity, co-equal in deity with God the Father and God the Son, is the promised Comforter, the Helper, the Spirit of Christ, who lives in those who follow Jesus.</p>
-            <p><a href="#">Learn More</a></p>
+            <p><a href="#">Read More</a></p>
           </div>
 
           <div>
             <h2 class="h2">The Bible</h2>
             <p>The Bible, containing Old and New Testaments, is the infallible, inspired word of God. Written by human authors under the supernatural guidance of the Holy Spirit, the Bible is the ultimate source of doctrine, instruction, correction, and reproof.</p>
-            <p><a href="#">Learn More</a></p>
+            <p><a href="#">Read More</a></p>
           </div>
 
           <div>
             <h2 class="h2">Humanity</h2>
             <p>Humanity is made in the image of God. Because we are made in His image, we are unique among creation and have special worth derived from our maker. Made in God’s image, He defines our identity and we belong to Him. Our purpose cannot be separated from Him.</p>
-            <p><a href="#">Learn More</a></p>
+            <p><a href="#">Read More</a></p>
           </div>
 
           <div>
             <h2 class="h2">Salvation</h2>
             <p>Jesus is the only way to God. There is no other way of salvation. By trusting in Jesus, we are saved from the curse and penalty of sin and can enjoy an abundant, eternal life that begins when we believe.</p>
-            <p><a href="#">Learn More</a></p>
+            <p><a href="#">Read More</a></p>
           </div>
 
           <div>
             <h2 class="h2">Eternal Security</h2>
             <p>Because God gives eternal life through Jesus Christ, believers are secure in their salvation for eternity. Salvation is maintained by the grace and power of God, not by a Christian’s self-effort. It is the grace and eternal power of God that gives this security. We are assured of our salvation based on the character of God who can never lie.</p>
-            <p><a href="#">Learn More</a></p>
+            <p><a href="#">Read More</a></p>
           </div>
 
           <div>
             <h2 class="h2">Eternity</h2>
             <p>We were created to exist forever. Those who follow Christ will exist eternally together with Christ in the kingdom of heaven. Those who do not know Christ will be separated from God in eternal torment.</p>
-            <p><a href="#">Learn More</a></p>
+            <p><a href="#">Read More</a></p>
           </div>
 
           <div>
             <h2 class="h2">Why We Gather</h2>
             <p>God promises when two or three are gathered, He is present among us in a special way. Our gatherings accomplish three important functions: worship, discipleship, and evangelism.</p>
-            <p><a href="#">Learn More</a></p>
+            <p><a href="#">Read More</a></p>
           </div>
 
         </div>
