updated height of secondary nav

--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
       </div>
     </section>
 
-    <section id="navigation-secondary" class="py-2 px-1 bring-forward drop-shadow">
+    <section id="navigation-secondary" class="py-2 px-1 py-md-3 bring-forward drop-shadow">
       <div class="d-flex flex-column flex-md-row justify-content-between align-content-center px-2">
         <h2 class="h6 mb-0 d-flex justify-content-between" style="margin-top: 2px;">About <i class="fa-solid fa-caret-down hidden-md hidden-lg hidden-xl" role="button" data-toggle="collapse" href="#nav-secondary" aria-expanded="false" aria-controls="nav-secondary"></i></h2>
         <div class="collapse in" id="nav-secondary">
